# paypi-python

./: LICENSE  README.md  pyproject.toml  setup.py
example/: simple.py
paypi/: __init__.py  main.py
src/: paypi.py  user.py
