[tool.poetry]
name = "paypi"
version = "1.0.8"
description = "Official PayPI Partner Library"
authors = ["PayPI <hello@paypi.dev>"]
keywords = ["paypi"]
readme = "README.md"
license = "MIT"
homepage = "https://paypi.dev"
repository = "https://github.com/paypi/paypi-python"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
gql = {extras = ["aiohttp"], version = "3.0.0a6"}
aiohttp = "^3.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"